Support multiple managers per team
